# WinDbg_Copilot

./: LICENSE.txt  README.md  setup.cfg  setup.py
windbg_copilot/: __init__.py  version.py  windbg_copilot.py
windbg_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
windbg_copilot/archive/: windbg_copilot_old.py
