# setup.cfg
[metadata]
name = WinDbg_Copilot
version = attr: WinDbg_Copilot.version.__version__
author = Jack Yin
author_email = suannai231@gmail.com
keywords = WinDbg, Copilot, chatgpt, openai

# add a description of your package
description = "WinDbg Copilot is a ChatGPT powered AI assistant integrated with WinDbg. It analyzes the output of the commands, and provides guidance to solve the stated problem."
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/suannai231/WinDbg_Copilot
download_url = 

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    # list the dependencies required by your package
    openai >= 0.27.2
    tiktoken >= 0.4.0
python_requires = >=3.9, <3.12